[package]
name = "aws-s3-easy-utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-s3 = {version = "0.26.4", features = ["rustls-tls", "no-verify-ssl"], default-features = false }
async-std = { version = "1.9.0", features = ["attributes", "tokio02"] }
simplelog = "0.10.0"
log = "0.4.14"
anyhow = "1.0.40"
glob = "0.3.0"
