[package]
name = "aws-s3-easy-utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-s3 = {version = "0.26.4", features = ["rustls-tls", "no-verify-ssl"], default-features = false }
anyhow = "1.0.40"
